@startuml
class ProjectController {
    + ProjectController(context:DBContext)
    + Exists(id:string) : bool
    + <<async>> Create(template:Project) : Task<ActionResult<string>>
    + <<async>> Get(id:string) : Task<ActionResult<string>>
    + <<async>> Update(id:string, template:Project) : Task<ActionResult<string>>
    + <<async>> UpdateAndFetchAll(id:string, template:Project) : Task<ActionResult<string>>
    + <<async>> Delete(id:string) : Task<ActionResult<string>>
    + <<async>> All() : Task<ActionResult<string>>
    + Settings() : string
}
class "IUserInterfaceCRUD`1"<T> {
}
class "GenericRepository`1"<T> {
}
ControllerBase <|-- ProjectController
"IUserInterfaceCRUD`1" "<Project>" <|-- ProjectController
ProjectController --> "ProjectRepository<Project>" "GenericRepository`1"
ProjectController --> "ServiceCenterRepository<ServiceCenter>" "GenericRepository`1"
ProjectController o-> "settings" JsonSerializerSettings
@enduml
